# Lem-in

./: CMakeLists.txt  Makefile  ants.c  best_opt.c  checker.c  finder.c  ft_strisdigit.c  hasher.c  lem_in  lem_in.h  main.c  notes  operator.c  options.c  print_out.c  reader.c  utils.c
libft/: Makefile  ft_lstnew_struct.c  ft_strisdigit.c  get_line.c  get_line_by_line.c  libft.h
libft/stack_queue/: stack_queue.h
