cmake_minimum_required(VERSION 3.7)
project(lem_in)

set(CMAKE_C_STANDARD 99)

set(SOURCE_FILES main.c lem_in.h reader.c operator.c checker.c hasher.c options.c utils.c finder.c best_opt.c ants.c print_out.c)
add_executable(lem_in ${SOURCE_FILES})
target_link_libraries(lem_in ${CMAKE_SOURCE_DIR}/libft/libft.a)